# document_generator

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE_DESKTOP_SETUP.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  MCP_INTEGRATION.md  POWERPOINT_METADATA_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.sh  run_mcp_server.sh  setup.py  verify_installation.py
.github/workflows/: ci.yml
document_generator/: __init__.py  config.py
document_generator/api/: document_service.py  main.py
document_generator/generators/: __init__.py  base.py  excel_generator.py  powerpoint_advanced_generator.py  powerpoint_generator.py  word_generator.py
document_generator/mcp_server/: __init__.py  server.py
document_generator/models/: __init__.py
examples/: api_example.py  create_advanced_template.py  create_templates.py  mcp_client_example.py  use_advanced_generator.py
tests/: __init__.py  test_api.py  test_generators.py  test_models.py
venv_py311/: pyvenv.cfg
